--- a/apps/base/infra-blocky/deploy/redis/secret/redis.conf
+++ b/apps/base/infra-blocky/deploy/redis/secret/redis.conf
@@ -1004,9 +1004,8 @@ replica-priority 100
 # For more information about ACL configuration please refer to
 # the Redis web site at https://redis.io/topics/acl
 user health on nopass +@connection
-# blocky doesn't seem to support a user, we can only configure a password
-#user default off
-user default on ~* &* +@all >changeme
+user default off
+user blocky on ~* &* +@all >changeme
 
 # ACL LOG
 #
