--- a/apps/vagrant/infra-blocky/deploy/secret/config.yml
+++ b/apps/vagrant/infra-blocky/deploy/secret/config.yml
@@ -1,12 +1,23 @@
-upstream:
-    # these external DNS resolvers will be used. Blocky picks 2 random resolvers from the list for each query
-    # format for resolver: [net:]host:[port][/path]. net could be empty (default, shortcut for tcp+udp), tcp+udp, tcp, udp, tcp-tls or https (DoH). If port is empty, default port will be used (53 for udp and tcp, 853 for tcp-tls, 443 for https (Doh))
-    # this configuration is mandatory, please define at least one external DNS resolver
-    default:
-        - 1.1.1.1
-        - 1.0.0.1
-# optional: timeout to query the upstream resolver. Default: 2s
-upstreamTimeout: 2s
+upstreams:
+    groups:
+        # these external DNS resolvers will be used. Blocky picks 2 random resolvers from the list for each query
+        # format for resolver: [net:]host:[port][/path]. net could be empty (default, shortcut for tcp+udp), tcp+udp, tcp, udp, tcp-tls or https (DoH). If port is empty, default port will be used (53 for udp and tcp, 853 for tcp-tls, 443 for https (Doh))
+        # this configuration is mandatory, please define at least one external DNS resolver
+        default:
+            - 1.1.1.1
+            - 1.0.0.1
+    # optional: Determines what strategy blocky uses to choose the upstream servers.
+    # accepted: parallel_best, strict
+    # default: parallel_best
+    strategy: parallel_best
+    # optional: timeout to query the upstream resolver. Default: 2s
+    timeout: 2s
+# optional: If true, blocky will fail to start unless at least one upstream server per group is reachable. Default: false
+startVerifyUpstream: true
+# optional: Determines how blocky will create outgoing connections. This impacts both upstreams, and lists.
+# accepted: dual, v4, v6
+# default: dual
+connectIPVersion: dual
 # optional: custom IP address(es) for domain name (with all sub-domains). Multiple addresses must be separated by a comma
 # example: query "printer.lan" or "my.printer.lan" will return 192.168.178.3
 customDNS:
@@ -47,6 +58,7 @@ blocking:
     whiteLists: {}
     # definition: which groups should be applied for which client
     clientGroupsBlock:
+        # default will be used, if no special definition for a client name exists
         default:
             - ads
             - special
@@ -58,18 +70,33 @@ blocking:
     # optional: TTL for answers to blocked domains
     # default: 6h
     blockTTL: 1m
-    # optional: automatically list refresh period (in duration format). Default: 4h.
-    # Negative value -> deactivate automatically refresh.
-    # 0 value -> use default
-    refreshPeriod: 4h
-    # optional: timeout for list download (each url). Default: 60s. Use large values for big lists or slow internet connections
-    downloadTimeout: 4m
-    # optional: Download attempt timeout. Default: 60s
-    downloadAttempts: 5
-    # optional: Time between the download attempts. Default: 1s
-    downloadCooldown: 10s
-    # optional: if true, application startup will fail if at least one list can't be downloaded / opened. Default: false
-    failStartOnListError: false
+    # optional: Configure how lists, AKA sources, are loaded
+    loading:
+        # optional: list refresh period in duration format.
+        # Set to a value <= 0 to disable.
+        # default: 4h
+        refreshPeriod: 4h
+        # optional: Applies only to lists that are downloaded (HTTP URLs).
+        downloads:
+            # optional: timeout for list download (each url). Use large values for big lists or slow internet connections
+            # default: 5s
+            timeout: 60s
+            # optional: Maximum download attempts
+            # default: 3
+            attempts: 5
+            # optional: Time between the download attempts
+            # default: 500ms
+            cooldown: 10s
+        # optional: Maximum number of lists to process in parallel.
+        # default: 4
+        concurrency: 4
+        # optional: if failOnError, application startup will fail if at least one list can't be downloaded/opened
+        # default: blocking
+        strategy: failOnError
+        # Number of errors allowed in a list before it is considered invalid.
+        # A value of -1 disables the limit.
+        # default: 5
+        maxErrorsPerSource: 5
 # optional: configuration for caching of DNS responses
 caching:
     # duration how long a response must be cached (min value).
@@ -98,10 +125,13 @@ caching:
     # Max number of domains to be kept in cache for prefetching (soft limit). Useful on systems with limited amount of RAM.
     # Default (0): unlimited
     prefetchMaxItemsCount: 0
+    # Time how long negative results (NXDOMAIN response or empty result) are cached. A value of -1 will disable caching for negative results.
+    # Default: 30m
+    cacheTimeNegative: 30m
 # optional: configuration of client name resolution
 #clientLookup:
 #  # optional: this DNS resolver will be used to perform reverse DNS lookup (typically local router)
-#  upstream: udp:192.168.178.1
+#  upstream: 192.168.178.1
 #  # optional: some routers return multiple names for client (host name and user defined name). Define which single name should be used.
 #  # Example: take second name if present, if not take first name
 #  singleNameOrder:
@@ -122,19 +152,25 @@ queryLog:
     # optional one of: mysql, postgresql, csv, csv-client. If empty, log to console
     type: postgresql
     # directory (should be mounted as volume in docker) for csv, db connection string for mysql/postgresql
-    target: ENC[AES256_GCM,data:fBN2NmDJ4HqJ6stTTAwoobkh1GMC0BplLXasBzxSEOaa82M25OPCq+XFJnk=,iv:Rl3NNi1RGWlyn1e2/Um47zvcR2zRoNa0nM0MVDRXCYY=,tag:BRMWqxpETuSNgzDFogmkmQ==,type:str]
+    target: ENC[AES256_GCM,data:yt8Hsfh44bwtk4f1ZEZyKel2Zdfz80kL4s/7xpurPP/AAZEK+1moi4YHTMg=,iv:TvNCTYTuwnSgxU59/BS5uo4U6Yo0ZiPvgDwhqpKmJH4=,tag:+A5O5R6RwIVTG3hr/eFGUA==,type:str]
     # if > 0, deletes log files which are older than ... days
     logRetentionDays: 7
     # optional: Max attempts to create specific query log writer, default: 3
-    creationAttempts: 5
+    creationAttempts: 3
     # optional: Time between the creation attempts, default: 2s
     creationCooldown: 2s
+    # optional: Which fields should be logged. You can choose one or more from: clientIP, clientName, responseReason, responseAnswer, question, duration. If not defined, it logs all fields
+    fields:
+        - clientIP
+        - duration
 # optional: Blocky can synchronize its cache and blocking state between multiple instances through redis.
 redis:
-    # Server address and port
+    # Server address and port or master name if sentinel is used
     address: redis:6379
+    # Username if necessary
+    username: blocky
     # Password if necessary
-    password: ENC[AES256_GCM,data:t69EJRyNZNE=,iv:hIkjNGbFejXtGd+/nNPu3GGQX14DV4m4UNqLhEdN6x8=,tag:YHx7Pellfs2TsduFdDAtfA==,type:str]
+    password: ENC[AES256_GCM,data:Otydmfb2+5E=,iv:do1Vd85IXs/NK1cFn9eosjxIXegQ89Qv//zkzpb4aDM=,tag:frFduA8SAUZ4ocN4Odn4zQ==,type:str]
     # Database, default: 0
     database: 0
     # Connection is required for blocky to start. Default: false
@@ -143,28 +179,40 @@ redis:
     connectionAttempts: 5
     # Time between the connection attempts, default: 1s
     connectionCooldown: 2s
-# optional: DNS listener port(s) and bind ip address(es), default 53 (UDP and TCP). Example: 53, :53, "127.0.0.1:5353,[::1]:5353"
-port: 53
-# optional: Port(s) and bind ip address(es) for DoT (DNS-over-TLS) listener. Example: 853, 127.0.0.1:853
-#tlsPort: 53
-# optional: HTTPS listener port(s) and bind ip address(es), default empty = no http listener. If > 0, will be used for prometheus metrics, pprof, REST API, DoH... Example: 443, :443, 127.0.0.1:443
-httpPort: 4000
-#httpsPort: 443
-# mandatory, if https port > 0: path to cert and key file for SSL encryption
+# optional: Mininal TLS version that the DoH and DoT server will use
+minTlsServeVersion: 1.3
+# if https port > 0: path to cert and key file for SSL encryption. if not set, self-signed certificate will be generated
 #certFile: server.crt
 #keyFile: server.key
-# optional: use this DNS server to resolve blacklist urls and upstream DNS servers. Useful if no DNS resolver is configured and blocky needs to resolve a host name. Format net:IP:port, net must be udp or tcp
-#bootstrapDns: tcp:1.1.1.1
-# optional: Drop all AAAA query if set to true. Default: false
-disableIPv6: false
-# optional: Log level (one from debug, info, warn, error). Default: info
-logLevel: info
-# optional: Log format (text or json). Default: text
-logFormat: text
-# optional: log timestamps. Default: true
-logTimestamp: true
-# optional: obfuscate log output (replace all alphanumeric characters with *) for user sensitive data like request domains or responses to increase privacy. Default: false
-logPrivacy: false
+# optional: ports configuration
+ports:
+    # optional: DNS listener port(s) and bind ip address(es), default 53 (UDP and TCP). Example: 53, :53, "127.0.0.1:5353,[::1]:5353"
+    dns: 53
+    # optional: Port(s) and bind ip address(es) for DoT (DNS-over-TLS) listener. Example: 853, 127.0.0.1:853
+    tls: 853
+    # optional: Port(s) and optional bind ip address(es) to serve HTTPS used for prometheus metrics, pprof, REST API, DoH... If you wish to specify a specific IP, you can do so such as 192.168.0.1:443. Example: 443, :443, 127.0.0.1:443,[::1]:443
+    #https: 443
+    # optional: Port(s) and optional bind ip address(es) to serve HTTP used for prometheus metrics, pprof, REST API, DoH... If you wish to specify a specific IP, you can do so such as 192.168.0.1:4000. Example: 4000, :4000, 127.0.0.1:4000,[::1]:4000
+    http: 4000
+# optional: logging configuration
+log:
+    # optional: Log level (one from debug, info, warn, error). Default: info
+    level: info
+    # optional: Log format (text or json). Default: text
+    format: text
+    # optional: log timestamps. Default: true
+    timestamp: true
+    # optional: obfuscate log output (replace all alphanumeric characters with *) for user sensitive data like request domains or responses to increase privacy. Default: false
+    privacy: false
+# optional: add EDE error codes to dns response
+ede:
+    # enabled if true, Default: false
+    enable: true
+# optional: configure optional Special Use Domain Names (SUDN)
+specialUseDomains:
+    # optional: block recomended private TLDs
+    # default: true
+    rfc6762-appendixG: true
 sops:
     kms: []
     gcp_kms: []
@@ -174,14 +222,14 @@ sops:
         - recipient: age1ykc9cp7e7sylr09ldufwd337h6kvghn8ga250unudvxxlaczpuzsv04rqn
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSA5b3phaUNRTkZSUjhMYS93
-            KzVTRHJKNzZNOXJDb08zUGNKRUM1OVhRWkhvCktlSzJ3eGtEVEp0c0RZS1EweWJo
-            SnV5aUVWV1dsY2FvS2ZBbW5QenpwWHMKLS0tIG1YcXNSdnMzLzdIT2x2L0ppdzc2
-            QVQyckRoNlVoOWoxc0lkQUR4WUFhSTAKrQJUoUKKPs4rueRU1OoUtMs4qz0SwC+c
-            9bfh6h2JDRs8DTGmpacx/Z6GjEAKoIGgno/Zdi1If/1BEmwE9yWNtQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBLdWVQSExzV0ZkR09iZTRz
+            MEpDYVEyQlV0Rks2NThpL0lmZWNzZEJtcWlnClpEUWtMOXEyT09jVHVHQ1pRT3BS
+            ZS9McThnUVNrTGN6YXNmWUpZeStkR0EKLS0tIGRVWUd5bGlGYkpzVkhTU0tHcTZO
+            dFczdkhlS2E2amRXb0g2OHkzMGVCQlkKvRE2J/uwRvmCqPMfgs2wS8zlZOPf0a60
+            ewZ86l+DGJes6jV/APT2kVqb4ZsCv2iiRGjCPTjPdP584flxz6zAXQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-06-27T20:01:32Z"
-    mac: ENC[AES256_GCM,data:vORvi9peCleOsjrWbzJPrJA7npA5SK4s8z1wTwCkmxlg9yzq4DKwFqPKGuOaGw6HVfbJvEK8x2NIwBa+iROE5XCSv8uaZs2sX8NzDn+XDu05TZLxqO7QiA0eEUDdDvd3ma0+hWS5AsBz6/gh111we0fMyxrOCbZ85P9C7fadDrI=,iv:JG2cCf22hqVnMwxM4PZAve1T7NwU+kunXETuz+qA5fM=,tag:673yWLBQC6I2TbxZKRSvSQ==,type:str]
+    lastmodified: "2023-09-05T20:27:16Z"
+    mac: ENC[AES256_GCM,data:XhaJ8iebuBslQytgxZOwJpBfbW4Y36vrYiDk/FAVleAJgaLpV9Yy1WN6aHmVvSl9m5iqge/sTsQu0sBIiK7Rw6xN4sPBqajO/rxreuCQV3RyP3ulVyZsTBaimUHnyRQWzZR2/mBAmu9lOJ1lETNpFElPo5HfhSJWnfHpg9HylrI=,iv:uVrQV94w2a7340whasRFsr0+62Y9laIzf5etGSarzoE=,tag:9ZJQihH819u2BT3Q3dLzSw==,type:str]
     pgp: []
     encrypted_regex: ^(target|password)$
     version: 3.7.3
