--- a/apps/base/monitoring-release-watcher/deploy/kustomization.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/kustomization.yaml
@@ -48,6 +48,7 @@ configMapGenerator:
   - config/watchers/app-home-zigbee2mqtt.yaml
   - config/watchers/app-home-zwave-js-ui.yaml
   - config/watchers/app-infra-blocky.yaml
+  - config/watchers/app-infra-crowdsec.yaml
   - config/watchers/app-infra-docker-registry-ui.yaml
   - config/watchers/app-infra-docker-registry.yaml
   - config/watchers/app-infra-gandi-livedns.yaml
