--- a/apps/base/infra-zonemta/deploy/zonemta/kustomization.yaml
+++ b/apps/base/infra-zonemta/deploy/zonemta/kustomization.yaml
@@ -6,7 +6,7 @@ labels:
     pairs:
       app.kubernetes.io/name: zonemta
       app.kubernetes.io/component: server
-      app.kubernetes.io/version: 3.5.1-node-19.8.1-alpine3.17
+      app.kubernetes.io/version: 3.6.6-node-20.6.0-alpine3.18
 
 generatorOptions:
  disableNameSuffixHash: true
@@ -20,6 +20,7 @@ secretGenerator:
   - secret/domains.toml
   - secret/interface_feeder.toml
   - secret/log.toml
+  - secret/mtaSts.toml
   - secret/plugin_default-headers.toml
   - secret/plugin_delivery-counters.toml
   - secret/plugin_dkim.toml
