--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-infra-zonemta.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-infra-zonemta.yaml
@@ -2,7 +2,7 @@ watchers:
   - name: ZoneMTA
     type: github_tag
     repo: zone-eu/zone-mta
-    tag : v3.5.1
+    tag : v3.6.6
     includes:
       - ^v[0-9]+\.[0-9]+\.[0-9]+
     excludes:
@@ -11,34 +11,33 @@ watchers:
     type: docker_registry
     repo: registry-1.docker.io
     image: library/redis
-    tag: 7.0.10-alpine3.17
+    tag: 7.2.1-alpine3.18
     includes:
-      - "[0-9]+\\.[0-9]+\\.[0-9]+.*alpine[0-9]+\\.[0-9][0-9]"
+      - ^[0-9]+\.[0-9]+\.[0-9]+.*alpine[0-9]+\.[0-9][0-9]
     excludes:
-      - .*alpine3\.1[0-6]
+      - .*alpine3\.1[0-7]
       - ^[0-6]\.
-      - ^7\.0\.[0-9]-.*
+      - ^7\.[0-1]\.
   - name: "ZoneMTA Mongo"
     type: docker_registry
     repo: registry-1.docker.io
     image: library/mongo
-    tag: 6.0.5-jammy
+    tag: 7.0.1-jammy
     includes:
       - '[0-9]+\.[0-9]+.[0-9]+-.*'
     excludes:
       - .*rc.*
       - .*-(nanoserver).*$
       - .*-focal$
-      - ^[0-5]\..*
-      - ^6\.0\.[0-4]-.*
+      - ^[0-6]\..*
   - name: "ZoneMTA Node"
     type: docker_registry
     repo: registry-1.docker.io
     image: library/node
-    tag: 19.8.1-alpine3.17
+    tag: 20.6.0-alpine3.18
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9][0-9]
     excludes:
-      - .*-alpine3.1[0-6]
-      - 1[0-8]\..*
-      - 19\.[0-7]\..*
+      - .*-alpine3.1[0-7]
+      - 1[0-9]\..*
+      - 20\.[0-5]\..*
