--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-logging-elasticsearch.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-logging-elasticsearch.yaml
@@ -1,8 +1,8 @@
 watchers:
   - type: docker_registry
-    repo: registry-1.docker.io
+    repo: public.ecr.aws
     image: opensearchproject/opensearch
-    tag: 2.6.0
+    tag: 2.9.0
     includes:
       - "[0-9]+\\.[0-9]+\\.[0-9]+.*"
     excludes:
@@ -10,7 +10,7 @@ watchers:
       - .*-rc.*
       - ^0\..*
       - ^1\..*
-      - ^2\.[0-5]\..*
+      - ^2\.[0-8]\..*
   - type: docker_registry
     repo: registry-1.docker.io
     image: justwatch/elasticsearch_exporter
