Fix fluentbit can't read nginx logs

--- a/apps/base/logging-fluentbit/deploy/daemonSet.yaml
+++ b/apps/base/logging-fluentbit/deploy/daemonSet.yaml
@@ -49,8 +49,10 @@ spec:
         - name: FLUENT_FLUENTD_PORT
           value: "24224"
         securityContext:
+          # privileged to be able to read all host logs
+          privileged: true
+          allowPrivilegeEscalation: true
           readOnlyRootFilesystem: true
-          allowPrivilegeEscalation: false
           capabilities:
             drop:
               - ALL
