--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-logging-kibana.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-logging-kibana.yaml
@@ -1,13 +1,13 @@
 watchers:
   - type: docker_registry
-    repo: registry-1.docker.io
+    repo: public.ecr.aws
     image: opensearchproject/opensearch-dashboards
-    tag: 2.6.0
+    tag: 2.9.0
     includes:
-      - "[0-9]+\\.[0-9]+\\.[0-9]+.*"
+      - ^[0-9]+\.[0-9]+\.[0-9]+
     excludes:
       - latest
       - .*-(rc|beta).*
       - ^0\..*
       - ^1\..*
-      - ^2\.[0-5]\..*
+      - ^2\.[0-8]\..*
