--- a/apps/base/monitoring-prometheus-operator/deploy/operator/clusterRole.yaml
+++ b/apps/base/monitoring-prometheus-operator/deploy/operator/clusterRole.yaml
@@ -18,6 +18,8 @@ rules:
   - prometheusagents/status
   - thanosrulers
   - thanosrulers/finalizers
+  - thanosrulers/status
+  - scrapeconfigs
   - servicemonitors
   - podmonitors
   - probes
