--- a/apps/base/monitoring-grafana/deploy/kustomization.yaml
+++ b/apps/base/monitoring-grafana/deploy/kustomization.yaml
@@ -8,7 +8,7 @@ labels:
     pairs:
       app.kubernetes.io/name: grafana
       app.kubernetes.io/component: grafana
-      app.kubernetes.io/version: 9.4.7
+      app.kubernetes.io/version: 9.5.3
 
 generatorOptions:
   disableNameSuffixHash: true
@@ -28,6 +28,7 @@ configMapGenerator:
   - config/dashboards/kube-prometheus/controller-manager.json
   - config/dashboards/kube-prometheus/grafana-overview.json
   - config/dashboards/kube-prometheus/k8s-resources-cluster.json
+  - config/dashboards/kube-prometheus/k8s-resources-multicluster.json
   - config/dashboards/kube-prometheus/k8s-resources-namespace.json
   - config/dashboards/kube-prometheus/k8s-resources-node.json
   - config/dashboards/kube-prometheus/k8s-resources-pod.json
