--- a/apps/base/monitoring-grafana/deploy/statefulSet.yaml
+++ b/apps/base/monitoring-grafana/deploy/statefulSet.yaml
@@ -16,16 +16,9 @@ spec:
         app.kubernetes.io/name: grafana
         app.kubernetes.io/component: grafana
     spec:
-      securityContext:
-        runAsNonRoot: true
-        runAsUser: 472 # grafana
-        fsGroup: 472
-        fsGroupChangePolicy: "OnRootMismatch"
-        seccompProfile:
-          type: RuntimeDefault
       automountServiceAccountToken: false
       containers:
-      - image: "registry.lan/grafana:9.4.7"
+      - image: "registry.lan/grafana:9.5.3"
         name: grafana
         envFrom:
         - configMapRef:
@@ -47,11 +40,13 @@ spec:
             cpu: 50m
             memory: 96Mi
         securityContext:
-          readOnlyRootFilesystem: true
           allowPrivilegeEscalation: false
           capabilities:
             drop:
-              - ALL
+            - ALL
+          readOnlyRootFilesystem: true
+          seccompProfile:
+            type: RuntimeDefault
         volumeMounts:
         - name: cluster-config
           mountPath: /etc/localtime
@@ -88,6 +83,13 @@ spec:
       nodeSelector:
         kubernetes.io/os: linux
         capability/general-purpose: 'yes'
+      securityContext:
+        fsGroup: 65534
+        runAsNonRoot: true
+        runAsUser: 65534
+        fsGroupChangePolicy: "OnRootMismatch"
+        seccompProfile:
+          type: RuntimeDefault
       serviceAccountName: grafana
       volumes:
       - name: cluster-config
