Fix homepage icons

--- a/apps/base/auth-lemonldap/deploy/ingress-manager.yaml
+++ b/apps/base/auth-lemonldap/deploy/ingress-manager.yaml
@@ -7,7 +7,7 @@ metadata:
     gethomepage.dev/group: Auth
     gethomepage.dev/name: LemonLDAP
     gethomepage.dev/description: Web Single Sign On and Access Management
-    gethomepage.dev/icon: lemonldapng
+    gethomepage.dev/icon: lemonldap-ng
     gethomepage.dev/href: https://lemonldap.auth.intra.web_domain_name/manager.html
     gethomepage.dev/pod-selector: "app.kubernetes.io/name=lemonldap"
 spec:
