--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-tool-miniflux.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-tool-miniflux.yaml
@@ -3,45 +3,46 @@ watchers:
     type: docker_registry
     repo: ghcr.io
     image: miniflux/miniflux
-    tag: 2.0.43-distroless
+    tag: 2.0.47-distroless
     includes:
       - ^[0-9]+.[0-9]+.[0-9]+-distroless$
     excludes:
       - ^1\..*
       - ^2.0.[0-9]-distroless$
       - ^2.0.[0-3][0-9]-distroless$
-      - ^2.0.4[0-2]-distroless$
+      - ^2.0.4[0-6]-distroless$
   - name: Miniflux PostgreSQL
     type: docker_registry
     repo: registry-1.docker.io
     image: library/postgres
-    tag: 15.2-alpine3.17
+    tag: 15.4-alpine3.18
     includes:
       - ^[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9]+
     excludes:
-      - .*-alpine3\.1[0-6]
+      - .*-alpine3\.1[0-7]
       - ^[0-9]\..*
       - ^1[0-4]\..*
   - name: "Reminiflux Node"
     type: docker_registry
     repo: registry-1.docker.io
     image: library/node
-    tag: 19.8.1-alpine3.17
+    tag: 20.6.0-alpine3.18
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9][0-9]
     excludes:
-      - .*-alpine3.1[0-6]
-      - 1[0-8]\..*
-      - 19\.[0-5]\..*
+      - .*-alpine3.1[0-7]
+      - 1[0-9]\..*
+      - 20\.[0-5]\..*
   - name: "Reminiflux Nginx"
     type: docker_registry
     repo: registry-1.docker.io
     image: library/nginx
-    tag: 1.23.4-alpine
+    tag: 1.25.2-alpine3.18
     includes:
-      - ^[0-9]+\.[0-9]+\.[0-9]+-alpine$
+      - ^[0-9]+\.[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9][0-9]
     excludes:
+      - .*-alpine3.1[0-7]
+      - .*-perl
       - 1\.[0-9]\..*
       - 1\.[0-1][0-9]\..*
-      - 1\.2[0-2]\..*
-      - 1\.23\.[0-2]-.*
+      - 1\.2[0-4]\..*
