--- a/apps/vagrant/tool-miniflux/deploy/miniflux-ingress-homepage-widget.yaml
+++ b/apps/vagrant/tool-miniflux/deploy/miniflux-ingress-homepage-widget.yaml
@@ -2,5 +2,5 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: miniflux
-  annotations:
-    #gethomepage.dev/widget.key: "changeme"
+  #annotations:
+  #  gethomepage.dev/widget.key: "changeme"
