--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-tool-nextcloud.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-tool-nextcloud.yaml
@@ -3,42 +3,50 @@ watchers:
     type: docker_registry
     repo: registry-1.docker.io
     image: library/nextcloud
-    tag: 25.0.5-apache
+    tag: 25.0.10-apache
     includes:
       - ^[0-9]+\.[0-9]+\.[0-9]+-apache
     excludes:
       - ^[0-9]\..*
       - ^1[0-9]\..*
       - ^2[0-4]\..*
+      - ^25\.0\.[0-9]-apache
+  - name: Nextcloud supercronic
+    type: github_release
+    repo: aptible/supercronic
+    release: v0.2.26
+    excludes:
+      - .*(alpha|beta|rc).*
+      - ^v0\.[0-1]\.
   - name: Nextcloud Calendar
     type: github_release
     repo: nextcloud-releases/calendar
-    release: v4.3.1
+    release: v4.4.5
     excludes:
       - .*(alpha|beta|rc).*
       - ^v[0-3]\..*
   - name: Nextcloud Contacts
     type: github_release
     repo: nextcloud-releases/contacts
-    release: v5.2.0
+    release: v5.3.2
     excludes:
       - .*(alpha|beta|rc).*
       - ^v[0-4]\..*
   - name: Nextcloud Notes
     type: github_release
     repo: nextcloud/notes
-    release: v4.7.2
+    release: v4.8.1
     excludes:
       - .*(alpha|beta|rc).*
       - ^v[0-3]\..*
   - name: Nextcloud Tasks
     type: github_release
     repo: nextcloud/tasks
-    release: v0.14.5
+    release: v0.15.0
     excludes:
       - .*(alpha|beta|rc).*
       - ^v0\.[0-9]\..*
-      - ^v0\.1[0-3]\..*
+      - ^v0\.1[0-4]\..*
   - name: Nextcloud Two Factor Totp
     type: github_release
     repo: nextcloud-releases/twofactor_totp
@@ -49,7 +57,7 @@ watchers:
     type: docker_registry
     repo: registry-1.docker.io
     image: library/mysql
-    tag: 8.0.32-debian
+    tag: 8.0.34-debian
     includes:
       - ^[0-9]\.[0-9]+\.[0-9]+-debian
     excludes:
@@ -57,18 +65,31 @@ watchers:
       - ^[0-7]\..*
       - ^8\.0\.[0-9]-.*
       - ^8\.0\.[1-2][0-9]-.*
-      - ^8\.0\.3[0]-.*
+      - ^8\.0\.3[0-3]-.*
   - name: "Nextcloud Redis"
     type: docker_registry
     repo: registry-1.docker.io
     image: library/redis
-    tag: 7.0.10-alpine3.17
+    tag: 7.2.1-alpine3.18
     includes:
       - "[0-9]+\\.[0-9]+\\.[0-9]+.*alpine[0-9]+\\.[0-9][0-9]"
     excludes:
-      - .*alpine3\.1[0-6]
+      - .*alpine3\.1[0-7]
       - ^[0-6]\.
-      - ^7\.0\.[0-9]-.*
+      - ^7\.[0-1]\.
+  - name: "Caldav recurring task scheduler base image"
+    type: docker_registry
+    repo: registry-1.docker.io
+    image: library/python
+    tag: 3.11.5-alpine3.18
+    includes:
+      - 3\.[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9]+
+    excludes:
+      - .*-alpine3\.[0-9]$
+      - .*-alpine3\.1[0-7]
+      - 3\.[0-9]\..*
+      - 3\.10\..*
+      - 3\.11\.[0-4]-.*
   - name: Caldav recurring task scheduler
     type: github_commit
     repo: Neraud/caldav-recurring-task-scheduler
