--- a/apps/vagrant/infra-gandi-livedns/application.yaml
+++ b/apps/vagrant/infra-gandi-livedns/application.yaml
@@ -7,7 +7,7 @@ metadata:
   #finalizers:
   #  - resources-finalizer.argocd.argoproj.io
   labels:
-    app.kubernetes.io/name: gitea
+    app.kubernetes.io/name: gandi-livedns
 spec:
   project: k8s-cluster
 
