--- a/apps/vagrant/monitoring-prometheus-operator/application.yaml
+++ b/apps/vagrant/monitoring-prometheus-operator/application.yaml
@@ -7,7 +7,7 @@ metadata:
   #finalizers:
   #  - resources-finalizer.argocd.argoproj.io
   labels:
-    app.kubernetes.io/name: gitea
+    app.kubernetes.io/name: prometheus-operator
 spec:
   project: k8s-cluster
 
