Fix syncthing discovery URL

--- a/apps/base/tool-syncthing/deploy/syncthing/config/syncthing-conf-injection.env
+++ b/apps/base/tool-syncthing/deploy/syncthing/config/syncthing-conf-injection.env
@@ -1,7 +1,7 @@
 SYNCTHING_DATA_DIR=/data
 SYNCTHING_CONF_options_localAnnounceEnabled=false
 SYNCTHING_CONF_options_globalAnnounceEnabled=true
-SYNCTHING_CONF_options_globalAnnounceServer=https://syncthing-discovery.tool.intra.k8s.test/?insecure
+SYNCTHING_CONF_options_globalAnnounceServer=https://syncthing-discovery.tool.intra.web_domain_name/?insecure
 SYNCTHING_CONF_options_announceLANAddresses=true
 SYNCTHING_CONF_options_crashReportingEnabled=true
 SYNCTHING_CONF_options_natEnabled=false
