Update kubernetes apt repo

--- a/ansible/install_infra/roles/kubernetes_node_preinstall/tasks/from_apt.yml
+++ b/ansible/install_infra/roles/kubernetes_node_preinstall/tasks/from_apt.yml
@@ -1,13 +1,20 @@
 ---
+# TODO : should not be needed after upgrading to Debian 12
+- name: Ensure /etc/apt/keyrings exists
+  ansible.builtin.file:
+    path: /etc/apt/keyrings
+    state: directory
+    mode: 0755
+
 - name: Add Kubenetes repo key
-  ansible.builtin.apt_key:
-    url: https://packages.cloud.google.com/apt/doc/apt-key.gpg
-    state: present
+  ansible.builtin.get_url:
+    url: https://pkgs.k8s.io/core:/stable:/{{ kubernetes_repo_version }}/deb/Release.key
+    dest: /etc/apt/keyrings/kubernetes-apt-keyring.asc
 
 - name: Add Kubernetes repo
   ansible.builtin.apt_repository:
     filename: "kubernetes"
-    repo: "deb https://apt.kubernetes.io/ kubernetes-xenial main"
+    repo: "deb [signed-by=/etc/apt/keyrings/kubernetes-apt-keyring.asc] https://pkgs.k8s.io/core:/stable:/{{ kubernetes_repo_version }}/deb/ /"
     state: present
 
 - name: Pin Kubernetes version
