Add restic to on-hosts watchers

--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/on-hosts.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/on-hosts.yaml
@@ -17,3 +17,6 @@ watchers:
       - .*(alpha|beta|rc).*
       - v1\.[0-1][0-9]\..*
       - v1\.2[0-7]\..*
+  - type: github_release
+    repo: restic/restic
+    release: 0.12.0
