Fix allow snippets from Ingress

--- a/apps/base/cluster-ingress-nginx/deploy/config/ingress-nginx-controller.env
+++ b/apps/base/cluster-ingress-nginx/deploy/config/ingress-nginx-controller.env
@@ -3,3 +3,5 @@ proxy-body-size=250m
 ssl-redirect=false
 hsts=false
 use-forwarded-headers=true
+# Enables Ingress to parse and add -snippet annotations/directives created by the user. _**default:*_ false
+allow-snippet-annotations=true
