--- a/apps/base/download-sabnzbd/deploy/kustomization.yaml
+++ b/apps/base/download-sabnzbd/deploy/kustomization.yaml
@@ -8,7 +8,7 @@ labels:
     pairs:
       app.kubernetes.io/name: sabnzbd
       app.kubernetes.io/component: sabnzbd
-      app.kubernetes.io/version: 3.7.2-3.11.2-slim-bullseye
+      app.kubernetes.io/version: 4.1.0-3.11.5-slim-bookworm
 
 secretGenerator:
 - name: sabnzbd-config
