Fix home-nodered home-assistant-websocket watcher

--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-home-node-red.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-home-node-red.yaml
@@ -21,6 +21,8 @@ watchers:
     tag: v0.56.1
     includes:
       - 'v[0-9]+\.[0-9]+\.[0-9]+'
+    excludes:
+      - .*-beta.*
   - type: github_tag
     repo: biddster/node-red-contrib-time-range-switch
     tag: 1.2.0
