--- a/apps/base/tool-homepage/deploy/rbac.yaml
+++ b/apps/base/tool-homepage/deploy/rbac.yaml
@@ -40,6 +40,14 @@ rules:
       - get
       - list
   - apiGroups:
+      - traefik.containo.us
+      - traefik.io
+    resources:
+      - ingressroutes
+    verbs:
+      - get
+      - list
+  - apiGroups:
       - metrics.k8s.io
     resources:
       - nodes
@@ -47,6 +55,12 @@ rules:
     verbs:
       - get
       - list
+  - apiGroups:
+      - apiextensions.k8s.io
+    resources:
+      - customresourcedefinitions/status
+    verbs:
+      - get
 
 ---
 
