--- a/apps/base/monitoring-kube-state-metrics/deploy/deployment.yaml
+++ b/apps/base/monitoring-kube-state-metrics/deploy/deployment.yaml
@@ -48,7 +48,7 @@ spec:
         - --secure-listen-address=:8443
         - --tls-cipher-suites=TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305
         - --upstream=http://127.0.0.1:8081/
-        image: registry.lan/kube-state-metrics-kube-rbac-proxy:v0.14.3
+        image: registry.lan/kube-state-metrics-kube-rbac-proxy:v0.15.0
         imagePullPolicy: IfNotPresent
         name: kube-rbac-proxy-main
         ports:
@@ -81,11 +81,13 @@ spec:
           runAsGroup: 65532
           runAsNonRoot: true
           runAsUser: 65532
+          seccompProfile:
+            type: RuntimeDefault
       - args:
         - --secure-listen-address=:9443
         - --tls-cipher-suites=TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305
         - --upstream=http://127.0.0.1:8082/
-        image: registry.lan/kube-state-metrics-kube-rbac-proxy:v0.14.3
+        image: registry.lan/kube-state-metrics-kube-rbac-proxy:v0.15.0
         imagePullPolicy: IfNotPresent
         name: kube-rbac-proxy-self
         ports:
@@ -118,6 +120,8 @@ spec:
           runAsGroup: 65532
           runAsNonRoot: true
           runAsUser: 65532
+          seccompProfile:
+            type: RuntimeDefault
       imagePullSecrets:
       - name: docker-config
       nodeSelector:
