--- a/apps/base/monitoring-node-exporter/deploy/daemonSet.yaml
+++ b/apps/base/monitoring-node-exporter/deploy/daemonSet.yaml
@@ -29,7 +29,7 @@ spec:
         - --collector.netclass.ignored-devices=^(veth.*|[a-f0-9]{15})$
         - --collector.netdev.device-exclude=^(veth.*|[a-f0-9]{15})$
         - --collector.textfile.directory=/var/lib/node_exporter/textfile_collector
-        image: registry.lan/node-exporter:v1.6.1
+        image: registry.lan/node-exporter:v1.7.0
         imagePullPolicy: IfNotPresent
         name: node-exporter
         readinessProbe:
@@ -75,7 +75,7 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: status.podIP
-        image: registry.lan/node-exporter-kube-rbac-proxy:v0.14.3
+        image: registry.lan/node-exporter-kube-rbac-proxy:v0.15.0
         imagePullPolicy: IfNotPresent
         name: kube-rbac-proxy
         ports:
@@ -107,6 +107,8 @@ spec:
           runAsGroup: 65532
           runAsNonRoot: true
           runAsUser: 65532
+          seccompProfile:
+            type: RuntimeDefault
       hostNetwork: true
       hostPID: true
       imagePullSecrets:
