--- a/apps/base/monitoring-prometheus-operator/deploy/operator/deployment.yaml
+++ b/apps/base/monitoring-prometheus-operator/deploy/operator/deployment.yaml
@@ -24,8 +24,11 @@ spec:
         - --config-reloader-memory-request=25Mi
         - --config-reloader-cpu-limit=50m
         - --config-reloader-memory-limit=25Mi
-        - --prometheus-config-reloader=registry.lan/prometheus-config-reloader:v0.68.0
-        image: registry.lan/prometheus-operator:v0.68.0
+        - --prometheus-config-reloader=registry.lan/prometheus-config-reloader:v0.69.1
+        env:
+        - name: GOGC
+          value: "30"
+        image: registry.lan/prometheus-operator:v0.69.1
         imagePullPolicy: IfNotPresent
         name: prometheus-operator
         ports:
@@ -55,7 +58,7 @@ spec:
         - --secure-listen-address=:8443
         - --tls-cipher-suites=TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_ECDSA_WITH_AES_256_GCM_SHA384,TLS_ECDHE_RSA_WITH_CHACHA20_POLY1305,TLS_ECDHE_ECDSA_WITH_CHACHA20_POLY1305
         - --upstream=http://127.0.0.1:8080/
-        image: registry.lan/prometheus-kube-rbac-proxy:v0.14.3
+        image: registry.lan/prometheus-kube-rbac-proxy:v0.15.0
         name: kube-rbac-proxy
         ports:
         - containerPort: 8443
@@ -76,6 +79,8 @@ spec:
           runAsGroup: 65532
           runAsNonRoot: true
           runAsUser: 65532
+          seccompProfile:
+            type: RuntimeDefault
       imagePullSecrets:
       - name: docker-config
       nodeSelector:
