--- a/apps/base/monitoring-prometheus-operator/deploy/rules/kube-prometheus/alertmanager.yaml
+++ b/apps/base/monitoring-prometheus-operator/deploy/rules/kube-prometheus/alertmanager.yaml
@@ -6,7 +6,7 @@ metadata:
     app.kubernetes.io/instance: k8s
     app.kubernetes.io/name: alertmanager
     app.kubernetes.io/part-of: kube-prometheus
-    app.kubernetes.io/version: 0.25.0
+    app.kubernetes.io/version: 0.26.0
     prometheus: k8s
     role: alert-rules
   name: alertmanager-k8s-rules
@@ -50,7 +50,7 @@ spec:
         (
           rate(alertmanager_notifications_failed_total{job="alertmanager-k8s",namespace="monitoring"}[5m])
         /
-          rate(alertmanager_notifications_total{job="alertmanager-k8s",namespace="monitoring"}[5m])
+          ignoring (reason) group_left rate(alertmanager_notifications_total{job="alertmanager-k8s",namespace="monitoring"}[5m])
         )
         > 0.01
       for: 5m
@@ -65,7 +65,7 @@ spec:
         min by (namespace,service, integration) (
           rate(alertmanager_notifications_failed_total{job="alertmanager-k8s",namespace="monitoring", integration=~`.*`}[5m])
         /
-          rate(alertmanager_notifications_total{job="alertmanager-k8s",namespace="monitoring", integration=~`.*`}[5m])
+          ignoring (reason) group_left rate(alertmanager_notifications_total{job="alertmanager-k8s",namespace="monitoring", integration=~`.*`}[5m])
         )
         > 0.01
       for: 5m
@@ -80,7 +80,7 @@ spec:
         min by (namespace,service, integration) (
           rate(alertmanager_notifications_failed_total{job="alertmanager-k8s",namespace="monitoring", integration!~`.*`}[5m])
         /
-          rate(alertmanager_notifications_total{job="alertmanager-k8s",namespace="monitoring", integration!~`.*`}[5m])
+          ignoring (reason) group_left rate(alertmanager_notifications_total{job="alertmanager-k8s",namespace="monitoring", integration!~`.*`}[5m])
         )
         > 0.01
       for: 5m
