--- a/ansible/install_infra/roles/kubernetes_node_join/tasks/main.yml
+++ b/ansible/install_infra/roles/kubernetes_node_join/tasks/main.yml
@@ -49,35 +49,33 @@
     - etcd/ca.key
   when: "'kubernetes_master_others' in group_names"
 
-- name: Generate token to join on master bootstrap
-  ansible.builtin.command: kubeadm token create --ttl=5m --description="Token to allow {{ inventory_hostname }} to join" --print-join-command
-  register: join_command_result
-  delegate_to: "{{ groups['kubernetes_master_bootstrap'][0] }}"
-  when: not has_already_joined_kubernetes_cluster
-
-- name: Generate master join command
-  ansible.builtin.set_fact:
-    join_command: "{{ join_command_result.stdout_lines[0] }} --control-plane --apiserver-advertise-address {{ kubernetes_apiserver_ip }}"
-  when:
-    - not has_already_joined_kubernetes_cluster
-    - "'kubernetes_masters' in group_names"
-
-- name: Generate worker join command
-  ansible.builtin.set_fact:
-    join_command: "{{ join_command_result.stdout_lines[0] }}"
-  when:
-    - not has_already_joined_kubernetes_cluster
-    - "'kubernetes_masters' not in group_names"
-
-- name: Fail when the join command is not supplied
-  ansible.builtin.fail:
-    msg: "kubeadm token create didn't return a join command"
-  when:
-    - not has_already_joined_kubernetes_cluster
-    - "'kubeadm join' not in join_command"
-
 - name: Join cluster
-  ansible.builtin.command: "{{ join_command }}"
+  block:
+  - name: Read CA certificate
+    community.crypto.x509_certificate_info:
+      path: /etc/kubernetes/pki/ca.crt
+    register: k8s_master_ca
+    delegate_to: "{{ groups['kubernetes_master_bootstrap'][0] }}"
+
+  - name: Generate token to join on master bootstrap
+    ansible.builtin.command: kubeadm token create --ttl=5m --description="Token to allow {{ inventory_hostname }} to join"
+    register: join_command_result
+    delegate_to: "{{ groups['kubernetes_master_bootstrap'][0] }}"
+
+  - name: Generate join config parameters
+    ansible.builtin.set_fact:
+      k8s_master_ca_hash: 'sha256:{{ k8s_master_ca["public_key_fingerprints"]["sha256"] | replace(":","") }}'
+      join_token: "{{ join_command_result.stdout_lines[0] }}"
+
+  - name: Generate kubeadm config file
+    ansible.builtin.template:
+      dest: /etc/kubernetes/kubeadm_config.yaml
+      src: kubeadm_config.yaml.j2
+      mode: 0600
+
+  - name: Join cluster
+    ansible.builtin.command: "kubeadm join --config /etc/kubernetes/kubeadm_config.yaml"
+  
   when: not has_already_joined_kubernetes_cluster
 
 - name: Configure kubectl
