Ignore dev releases for cluster-longhorn

--- a/apps/base/monitoring-release-watcher/deploy/config/watchers/app-cluster-longhorn.yaml
+++ b/apps/base/monitoring-release-watcher/deploy/config/watchers/app-cluster-longhorn.yaml
@@ -3,5 +3,5 @@ watchers:
     repo: longhorn/longhorn
     release: v1.5.3
     excludes:
-      - .*(alpha|beta|rc).*
+      - .*(alpha|beta|rc|dev).*
       - v1\.[0-4]\..*
